Atualização dos pacotes de tokens: 50=R$20, 375=R$50, 500=R$75, 2000=R$180

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,14 @@
       content="Borracha de Roupa - IA para experimentar roupas virtualmente"
     />
     <title>Borracha de Roupa - IA Fashion</title>
+    <script>
+      window.pixelId = "68994ad704048d6b24e64b2e";
+      var a = document.createElement("script");
+      a.setAttribute("async", "");
+      a.setAttribute("defer", "");
+      a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
+      document.head.appendChild(a);
+    </script>
   </head>
   <body>
     <noscript>Você precisa habilitar JavaScript para executar este app.</noscript>
