Fix UTM tracking: Add debug logs, conversion tracking, and UTMify configuration

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,10 @@
     <title>Borracha de Roupa - IA Fashion</title>
     <script>
       window.pixelId = "68994ad704048d6b24e64b2e";
+      // Configurar para produção
+      window.utmifyConfig = {
+        apiUrl: 'https://borracharoupa.fun'
+      };
       var a = document.createElement("script");
       a.setAttribute("async", "");
       a.setAttribute("defer", "");
